@@ -40,6 +40,7 @@ class LanguageZh extends LanguageZh_cn {
 	var $mTablesLoaded = false;
 	var $mCacheKey;
 	var $mDoTitleConvert = true, $mDoContentConvert = true;
+	var $mTitleDisplay=false;
 	function LanguageZh() {
 		global $wgDBname;
 		$this->mCacheKey = $wgDBname . ":zhtables";
@@ -320,6 +321,8 @@ class LanguageZh extends LanguageZh_cn {
 		if( $isTitle ) {
 			if( !$this->mDoTitleConvert )
 				return $text;
+			if(	$this->mTitleDisplay!=false )
+				return $this->mTitleDisplay;
 
 			global $wgRequest;
 			$isredir = $wgRequest->getText( 'redirect', 'yes' );
@@ -343,11 +346,28 @@ class LanguageZh extends LanguageZh_cn {
 		$text = $this->autoConvert($tfirst);
 		foreach($tarray as $txt) {
 			$marked = explode("}-", $txt);
-			
-			$choice = explode(";", $marked{0});
+
+			//strip &nbsp; since it interferes with the parsing, plus,
+			//all spaces should be stripped in this tag anyway.
+			$marked[0] = str_replace('&nbsp;', '', $marked[0]);
+
+			/* see if this conversion is specifically for the
+			  article title. the format is
+				-{T|zh-cn:foo; zh-tw:bar}-
+			*/
+			$fortitle = false;
+			$tt = explode("|", $marked[0], 2);
+			if(sizeof($tt) == 2 && trim($tt[0]) == 'T') {
+				$choice = explode(";", $tt[1]);
+				$fortitle = true;
+			}
+			else {
+				$choice = explode(";", $marked[0]);
+			}
+			$disp = '';
 			if(!array_key_exists(1, $choice)) {
 				/* a single choice */
-				$text .= $choice{0};
+				$disp = $choice[0];
 			} else {
 				$choice1=false;
 				$choice2=false;
@@ -357,8 +377,8 @@ class LanguageZh extends LanguageZh_cn {
 						//syntax error in the markup, give up
 						break;			
 					}
-					$code = trim($v{0});
-					$content = trim($v{1});
+					$code = trim($v[0]);
+					$content = trim($v[1]);
 					if($code == $plang) {
 						$choice1 = $content;
 						break;
@@ -367,14 +387,18 @@ class LanguageZh extends LanguageZh_cn {
 						$choice2 = $content;
 				}
 				if ( $choice1 )
-					$text .= $choice1;
+					$disp = $choice1;
 				elseif ( $choice2 )
-					$text .= $choice2;
+					$disp = $choice2;
 				else
-					$text .= $marked{0};
+					$disp = $marked[0];
 			}
+			if($fortitle)
+				$this->mTitleDisplay = $disp;
+			else
+				$text .= $disp;
 			if(array_key_exists(1, $marked))
-				$text .= $this->autoConvert($marked{1});
+				$text .= $this->autoConvert($marked[1]);
 		}
 		
 		return $text;
